2002-07-03  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: check for gtk with multihead
	support and define GTK_MULTIHEAD.

	* components/tree/nautilus-tree-view.c:
	(got_activation_uri_callback): launch applications on the
	correct screen.

	* libnautilus-private/Makefile.am: add egg-screen-exec.[ch]
	to the build.

	* libnautilus-private/nautilus-directory-background.c:
	Make sure we're drawing the background on the correct
	screen.

	* libnautilus-private/nautilus-dnd.[ch]: (nautilus_drag_init),
	(nautilus_drag_finalize): move the stipple from here into
	icon-dnd, where its actually used.

	* libnautilus-private/nautilus-icon-canvas-item.c:
	(draw_stretch_handles): create the stipple on the correct
	screen.

	* libnautilus-private/nautilus-icon-container.c:
	(realize): create the stipple here, but use eel_stipple
	instead of homebrew.

	* libnautilus-private/nautilus-icon-dnd.c:
	(nautilus_icon_dnd_set_stipple): impl changing the stipple.

	* libnautilus-private/nautilus-multihead-hacks.h: impl
	A set of hacks to allow building with gtk+ 2.0.x and
	not have loads of #ifdef HAVE_GTK_MULTIHEAD.

	* libnautilus-private/nautilus-program-chooser.c:
	Launch the mime capplet on the correct screen.
	
	* libnautilus-private/nautilus-program-choosing.c:
	Implement launching apps on the correct screen.

	* src/file-manager/fm-desktop-icon-view.c:
	(icon_container_set_workarea), (net_workarea_changed),
	(desktop_icon_view_property_filter),
	(fm_desktop_icon_view_finalize), (unrealized_callback),
	(realized_callback), (fm_desktop_icon_view_init),
	(new_terminal_callback), (new_launcher_callback),
	(change_background_callback), (volume_ops_callback):
	* src/file-manager/fm-directory-view.c: (edit_launcher),
	(edit_launcher_callback), (new_launcher_callback),
	(run_script_callback), (create_popup_menu), (activate_callback),
	(fm_directory_view_move_copy_items):
	* src/file-manager/fm-properties-window.c:
	(create_properties_window), (fm_properties_window_present):
